--- a/src/stub.html
+++ b/src/stub.html
@@ -1,9 +1,14 @@
 <!doctype html>
 <html>
-    <head>
-        <title>react-redux</title>
-    </head>
-    <body>
-        <div id="react-app"></div>
-    </body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <base href="/">
+    <title>react-redux</title>
+  </head>
+  <body>
+    <div id="react-app"></div>
+  </body>
 </html>
